# suppliers-parser

./: .gitignore  commands.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  scheduler.py
backend/app/ai/: category_classifier.py  client.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  categories.py  product.py
backend/app/config/: settings.py
backend/app/dal/: category.py  product.py
backend/app/db/: session.py
backend/app/models/: category.py  product.py
backend/app/schemas/: product.py
backend/app/services/: category.py  product.py  supplier.py
backend/app/suppliers/: base.py  registry.py
backend/app/suppliers/andopt2_com_ua/: client.py
backend/app/suppliers/b2b_spartakelectronics_com/: client.py
backend/app/suppliers/dtopelectronic_com_ua/: client.py
backend/app/suppliers/grantopt_com_ua/: client.py
backend/app/suppliers/jmaxtvshop_com_ua/: client.py
backend/app/suppliers/jumpex_com_ua/: client.py
backend/app/suppliers/matrix7km_com/: client.py
backend/app/suppliers/melad_com_ua/: client.py
backend/app/suppliers/venera7km_com_ua/: client.py
backend/migrations/: env.py
backend/migrations/versions/: 1873c80bd0ea_init.py  32df2d3a58ab_add_updated_at_to_products.py  7128c6983ee1_add_deleted_at_to_products_table.py  a3f1d9e2c047_add_supplier_name_to_products.py  b5e4c8a91f23_seed_categories.py  ecec6376ac07_change_description_to_text.py
docs/: architecture.md  concept.md  requirements.md
